package com.dutianze.designpattern.others.eventasynchronous;

/**
 * @author dutianze
 * @date 2022/9/12
 */
public interface IEvent {

  void start();

  void stop();

  void status();
}
